--- a/predictor/src/predictor/PredictorGUI.form
+++ b/predictor/src/predictor/PredictorGUI.form
@@ -189,7 +189,7 @@
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
               <Format format="dd/MM/yyyy" subtype="-1" type="1"/>
             </Property>
-            <Property name="toolTipText" type="java.lang.String" value="dd/mm/yy | ex: 15/09/2019"/>
+            <Property name="toolTipText" type="java.lang.String" value="dd/mm/yyyy | ex: 15/09/2019"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jFormattedTextField2">
